tests/ui/unsound_collection_transmute/lib.stderr
1. [31mError[E001]: [0m[1mParse error.
    --> docs/patterns/unsound-collection-transmute.rpl:11:55
   |
11 |         let $q: alloc::vec::Vec<$U> = move $p as alloc::vec::Vec<$U> (Transmute);␊
   |                                                       ^

   Possible RPL grammar rules: [Word,MirPlace,MirRvalueCast,MirLocalDecl][0m
error: An error was found with input RPL pattern(s)

error: aborting due to 1 previous error

